# OmniVoice-Studio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  SECURITY.md  SUPPORT.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs-drift.yml  release.yml
.planning/: STATE.md
.planning/issue-clusters/: 01-windows-model-storage-hf-cache.md  02-windows-runtime-integrity.md  03-installer-bootstrap-network.md  04-pipeline-error-transparency.md  05-voice-design-instruct-validator.md
backend/: main.py
backend/api/: schemas.py
backend/core/: db.py  diagnose.py  diagnostic_bundle.py  error_journal.py  failure.py  onboarding.py  personalities.py  scrub.py  version.py
backend/schemas/: requests.py
backend/services/: asr_backend.py  audiobook.py  dub_pipeline.py  engine_routing.py  loudness.py  model_manager.py  network_share.py  sentence_chunker.py  speech_rate.py  tailscale.py  tts_backend.py
backend/tests/: test_asr_transcribe_timeout.py
docs/: competitive-analysis.md  features.yaml  sharing.md
docs/engines/: disk-usage.md  dots-tts.md  moss-tts-v15.md
docs/install/: docker.md  macos.md  troubleshooting.md
frontend/: package.json
frontend/public/: donation_progress.json
frontend/src/: App.jsx  (+2 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: bootstrap.rs  lib.rs  updater_channel.rs
scripts/: build_demos.sh  build_dub_demo.sh  check-docs-drift.py  install.sh  render_demos_omnivoice.py
tests/: test_app_version.py  test_asr_gpu_compat.py  test_audiobook.py  test_diagnose.py  test_diagnostic_bundle.py  test_dots_tts.py  test_dub_timing_strategy.py  test_engine_routing.py  test_error_journal.py  test_failure_classify.py  test_generate_engine.py  test_generation_audio_guard.py  test_llm_openai_available.py  test_longform_e2e.py  test_loudness.py  test_mlx_gate_390.py  test_moss_tts_v15.py  test_network_middleware.py  test_network_share.py  test_no_hardcoded_cjk.py  test_scrub.py  test_sentence_chunker.py  test_tailscale_service.py
(+93 files in other folders)
